cluster/apps/default/changedetection/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: default
  labels:
    app: changedetection
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: changedetection
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:0.60.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: "/datastore"
              name: changedetection-data-volume
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 400m
              memory: 512Mi
      volumes:
        - name: changedetection-data-volume
          persistentVolumeClaim:
            claimName: changedetection-pvc
