cluster/apps/default/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection-svc
  namespace: default
spec:
  selector:
    app: changedetection
  ports:
    - protocol: TCP
      port: 5000
      name: http
  clusterIP: None
  type: ClusterIP
